--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO 5: Ubah menjadi data binding-->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,6 +13,7 @@
         android:layout_height="match_parent"
         android:padding="16dp">
 
+        <!--TODO 8: Aplikasikan Binding Adapter disini-->
         <ImageView
             android:id="@+id/iv_list_user"
             android:layout_width="70dp"
